ops-tool/deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortgeta-ops-tool
  labels:
    app: shortgeta-ops-tool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shortgeta-ops-tool
  template:
    metadata:
      labels:
        app: shortgeta-ops-tool
    spec:
      containers:
        - name: web
          image: ghcr.io/gensdeis/shortgeta-ops-tool:main
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /login
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 15
